--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
     "start": "node index.js",
+    "test": "jest",
     "dev": "nodemon index.js"
   },
-"type": "module",
+  "type":"module",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -12,6 +13,18 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ts-jest": "^29.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
