--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "client",
   "version": "0.1.0",
@@ -20,7 +19,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
