--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
     "test": "jest",
     "dev": "nodemon index.js"
   },
-  "type":"module",
+  "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
     "nodemon": "^3.1.9",
+    "razorpay": "^2.9.6",
     "ts-jest": "^29.3.0"
   },
   "devDependencies": {
