--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,7 @@
-# .env
-RAZORPAY_KEY_ID= <here put your razor pay key ID>
-RAZORPAY_KEY_SECRET= <here put your razor pay key_secret>
+# api/.env
+
+RAZORPAY_KEY_ID= rzp_test_uItWTTVHVE2iIF
+
+RAZORPAY_KEY_SECRET= pi7fPvvaJ6OK8A1rkydaZSVE
+
 PORT=8000 # Or any port you prefer for the backend
