--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-# In /your-react-app-root/.env
-REACT_APP_RAZORPAY_KEY_ID = <here put your razor pay key ID>
+# client/.env
+REACT_APP_RAZORPAY_KEY_ID = rzp_test_uItWTTVHVE2iIF
