--- a/api/package.json
+++ b/api/package.json
@@ -15,19 +15,24 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
+    "node-mocks-http": "^1.16.2",
     "nodemon": "^3.1.9",
-    "razorpay": "^2.9.6",
-    "ts-jest": "^29.3.0"
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.14.1",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3"
   }
 }
