--- a/client/package.json
+++ b/client/package.json
@@ -15,15 +15,19 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
+    "mongoose": "^8.13.2",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy": "http://localhost:8000"
+
   },
   "scripts": {
     "start": "react-scripts start",
