--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "web-vitals": "^2.1.4",
     "papaparse": "^5.5.2"
   },
+  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
