--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "seed": "node scripts/seedDb.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
