--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
 # client/.env
 REACT_APP_RAZORPAY_KEY_ID = rzp_test_uItWTTVHVE2iIF
 GENERATE_SOURCEMAP=false
+REACT_APP_API_URL = http://localhost:8000/api
+REACT_APP_SERVER_BASE_URL = http://localhost:8000
