--- a/api/.env
+++ b/api/.env
@@ -6,3 +6,9 @@ ACCESS_TOKEN_SECRET="access_token_secret"
 REFRESH_TOKEN_SECRET="refresh_token_secret"
 
 MONGODB_URI="mongodb+srv://divyansh:KrHRg7mgeh7tgNiU@cluster0.qhaz53w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+# Email configuration for password reset
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USERNAME=mahek4.iitg@gmail.com
+EMAIL_PASSWORD=edvixavvtihavedq
