--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,6 @@
         "@react-pdf/renderer": "^4.3.0",
         "@tanstack/react-query": "^5.69.0",
         "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.2.0",
-        "@testing-library/user-event": "^13.5.0",
         "axios": "^1.8.4",
         "bootstrap": "^5.3.3",
         "moment": "^2.30.1",
@@ -51,5 +48,12 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "jest": "^27.5.1",
+        "jest-environment-jsdom": "^29.7.0"
     }
 }
